NEXT-868 - Apply changes in sw-sidebar to modules

--- a/Resources/administration/src/app/component/grid/sw-grid/sw-grid.less
+++ b/Resources/administration/src/app/component/grid/sw-grid/sw-grid.less
@@ -21,7 +21,7 @@
     border: 1px solid @sw-grid-item-color-border;
 
     &.sw-grid--sidebar {
-        grid-template-columns: auto 64px;
+        grid-template-columns: 1fr auto;
     }
 
     &.sw-grid--fullpage {
