--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.less
@@ -15,6 +15,7 @@
 
     .sw-media-quickinfo__collapse-content {
         padding-top: 25px;
+        margin: 0 25px;
     }
 
     .sw-media-quickinfo__two-columns {
