--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
@@ -1,47 +1,46 @@
 {% block sw_media_sidebar %}
     <div class="sw-media-sidebar">
-        <sw-sidebar slot="sidebar">
-            {% block sw_media_sidebar_container %}
-                <div class="sw-media-sidebar__item-container">
-                    {% block sw_media_sidebar_items_top %}
-                        <div class="sw-media-sidebar__items-top">
-                            {% block sw_media_sidebar_actions_quickinfo %}
-                                <sw-sidebar-item icon="default-action-document-view"
-                                                 :title="$tc('sw-media.sidebar.actions.quickInfo')"
-                                                 ref="quickInfoButton"
-                                                 :disabled="!hasItems">
-                                    <sw-media-quickinfo
-                                            v-if="isSingleFile"
-                                            :key="getKey"
-                                            :item="items[0]"
-                                            :autoplay="autoplay"
-                                            @sw-media-quickinfo-open-modal-replace="openModalReplace"
-                                            @sw-media-quickinfo-open-modal-delete="openModalDelete">
-                                    </sw-media-quickinfo>
-                                    <sw-media-quickinfo-multiple
-                                            v-else-if="isMultipleFile"
-                                            :items="items"
-                                            @sw-media-quickinfo-open-modal-delete="openModalDelete">
-                                    </sw-media-quickinfo-multiple>
-                                    <div v-else>{# empty slot #}</div>
-                                </sw-sidebar-item>
-                            {% endblock %}
-                        </div>
-                    {% endblock %}
+        {% block sw_media_sidebar_sidebar %}
+            <sw-sidebar>
+                {% block sw_media_sidebar_item_quickinfo %}
+                    <sw-sidebar-item
+                        icon="default-action-document-view"
+                        :title="$tc('sw-media.sidebar.actions.quickInfo')"
+                        ref="quickInfoButton"
+                        :disabled="!hasItems">
 
-                    {% block sw_media_sidebar_items_bottom %}
-                        <div class="sw-media-sidebar__items-bottom">
-                            {% block sw_media_sidebar_actions_delete_file %}
-                                <sw-sidebar-item icon="default-action-trash"
-                                                 @click="openModalDelete"
-                                                 :disabled="!hasItems">
-                                </sw-sidebar-item>
-                            {% endblock %}
-                        </div>
-                    {% endblock %}
-                </div>
-            {% endblock %}
-        </sw-sidebar>
+                        {% block sw_media_sidebar_item_quickinfo_content %}
+                            <div class="sw-media-sidebar__quickinfo-wrapper">
+                                <sw-media-quickinfo
+                                    v-if="isSingleFile"
+                                    :key="getKey"
+                                    :item="items[0]"
+                                    :autoplay="autoplay"
+                                    @sw-media-quickinfo-open-modal-replace="openModalReplace"
+                                    @sw-media-quickinfo-open-modal-delete="openModalDelete">
+                                </sw-media-quickinfo>
+
+                                <sw-media-quickinfo-multiple
+                                    v-else-if="isMultipleFile"
+                                    :items="items"
+                                    @sw-media-quickinfo-open-modal-delete="openModalDelete">
+                                </sw-media-quickinfo-multiple>
+                            </div>
+                        {% endblock %}
+                    </sw-sidebar-item>
+                {% endblock %}
+
+                {% block sw_media_sidebar_item_delete %}
+                    <sw-sidebar-item
+                        icon="default-action-trash"
+                        :title="$tc('sw-media.sidebar.actions.delete')"
+                        :disabled="!hasItems"
+                        alignBottom
+                        @click="openModalDelete">
+                    </sw-sidebar-item>
+                {% endblock %}
+            </sw-sidebar>
+        {% endblock %}
 
         {% block sw_media_sidebar_modal_replace %}
             <sw-media-modal-replace
