--- a/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-list/sw-customer-list.html.twig
@@ -236,7 +236,11 @@
                             {% block sw_customer_list_grid_sidebar %}
                                 <sw-sidebar slot="sidebar">
                                     {% block sw_customer_list_grid_sidebar_refresh %}
-                                        <sw-sidebar-item icon="default-arrow-360-left" @click="onRefresh"></sw-sidebar-item>
+                                        <sw-sidebar-item
+                                            icon="default-arrow-360-left"
+                                            :title="$tc('sw-customer.list.titleSidebarItemRefresh')"
+                                            @click="onRefresh">
+                                        </sw-sidebar-item>
                                     {% endblock %}
                                 </sw-sidebar>
                             {% endblock %}
