--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.html.twig
@@ -39,15 +39,17 @@
 
                 <template slot="content">
                     {% block sw_media_quickinfo_multiple_file_names_content %}
-                        <sw-media-grid-media-item
-                            v-for="mediaItem in items"
-                            :key="mediaItem.id"
-                            :item="mediaItem"
-                            :selected="false"
-                            :isList="true"
-                            :showContextMenuButton="false"
-                            :showSelectionIndicator="false">
-                        </sw-media-grid-media-item>
+                        <div class="sw-media-quickinfo-multiple__collapse-content">
+                            <sw-media-grid-media-item
+                                v-for="mediaItem in items"
+                                :key="mediaItem.id"
+                                :item="mediaItem"
+                                :selected="false"
+                                :isList="true"
+                                :showContextMenuButton="false"
+                                :showSelectionIndicator="false">
+                            </sw-media-grid-media-item>
+                        </div>
                     {% endblock %}
                 </template>
             </sw-media-collapse>
