--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo-multiple/sw-media-quickinfo-multiple.less
@@ -16,6 +16,7 @@
 
     .sw-media-quickinfo-multiple__collapse-content {
         padding-top: 25px;
+        margin: 0 25px;
     }
 
     .sw-media-quickinfo-multiple__two-columns {
