--- a/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-list/sw-order-list.html.twig
@@ -170,7 +170,11 @@
                                 {% block sw_order_list_grid_sidebar %}
                                     <sw-sidebar slot="sidebar">
                                         {% block sw_order_list_grid_sidebar_refresh %}
-                                            <sw-sidebar-item icon="default-arrow-360-left" @click="onRefresh"></sw-sidebar-item>
+                                            <sw-sidebar-item
+                                                icon="default-arrow-360-left"
+                                                :title="$tc('sw-order.list.titleSidebarItemRefresh')"
+                                                @click="onRefresh">
+                                            </sw-sidebar-item>
                                         {% endblock %}
                                     </sw-sidebar>
                                 {% endblock %}
