--- a/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-list/sw-product-list.twig
@@ -209,9 +209,10 @@
                                 {% block sw_product_list_grid_sidebar %}
                                     <sw-sidebar slot="sidebar">
                                         {% block sw_product_list_grid_sidebar_refresh %}
-                                            <sw-sidebar-item icon="default-arrow-360-left"
-                                                             :title="$tc('sw-product.list.titleRefresh')"
-                                                             @click="onRefresh">
+                                            <sw-sidebar-item
+                                                icon="default-arrow-360-left"
+                                                :title="$tc('sw-product.list.titleSidebarItemRefresh')"
+                                                @click="onRefresh">
                                             </sw-sidebar-item>
                                         {% endblock %}
                                     </sw-sidebar>
