--- a/Resources/administration/src/app/component/base/sw-alert/sw-alert.html.twig
+++ b/Resources/administration/src/app/component/base/sw-alert/sw-alert.html.twig
@@ -2,7 +2,12 @@
     <div class="sw-alert" :class="alertClasses" role="alert">
         {% block sw_alert_inner %}
             {% block sw_alert_icon %}
-                <sw-icon class="sw-alert__icon" :name="alertIcon" decorative v-if="showIcon"></sw-icon>
+                <sw-icon v-if="showIcon"
+                         size="20px"
+                         class="sw-alert__icon"
+                         :name="alertIcon"
+                         decorative>
+                </sw-icon>
             {% endblock %}
 
             {% block sw_alert_title %}
