--- a/Resources/administration/src/app/component/sidebar/sw-sidebar-navigation-item/sw-sidebar-navigation-item.less
+++ b/Resources/administration/src/app/component/sidebar/sw-sidebar-navigation-item/sw-sidebar-navigation-item.less
@@ -5,7 +5,7 @@
 @sw-sidebar-button-hover-color-background:  @color-cadet-blue;
 @sw-sidebar-button-active-color-background: @color-cadet-blue;
 
-.sw-sidebar-button {
+.sw-sidebar-navigation-item {
     width: 64px;
     height: 64px;
     border: none;
