--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
@@ -35,7 +35,7 @@
                         icon="default-action-trash"
                         :title="$tc('sw-media.sidebar.actions.delete')"
                         :disabled="!hasItems"
-                        alignBottom
+                        position="bottom"
                         @click="openModalDelete">
                     </sw-sidebar-item>
                 {% endblock %}
