--- a/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
+++ b/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.less
@@ -1,26 +1,41 @@
+@import "~less/variables";
+
+@sw-card-view-z-index-sidebar: @z-index-sidebar;
+
 .sw-card-view {
+    position: relative;
     width: 100%;
     height: 100%;
-    padding: 40px;
-    position: absolute;
-    overflow-x: hidden;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
 
-    @media screen and (max-width: 1360px) {
-        padding: 15px;
+    .sw-card-view__content {
+        width: 100%;
+        height: 100%;
+        padding: 40px;
+        position: absolute;
+        overflow-x: hidden;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
 
-        .sw-tabs {
-            max-width: 770px;
-            margin-bottom: 30px;
+        @media screen and (max-width: 1360px) {
+            padding: 15px;
+
+            .sw-tabs {
+                max-width: 770px;
+                margin-bottom: 30px;
+            }
+
+            .sw-card {
+                max-width: 770px;
+            }
+
+            .sw-card--large {
+                max-width: 100%;
+            }
         }
+    }
 
-        .sw-card {
-            max-width: 770px;
-        }
-
-        .sw-card--large {
-            max-width: 100%;
-        }
+    .sw-card-view__sidebar {
+        position: absolute;
+        z-index: @sw-card-view-z-index-sidebar;
     }
 }
