NEXT-414 - Add media sidebar in product detail page

--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -82,8 +82,8 @@
     .sw-media-grid-item__content.is--list {
         border: 1px solid @sw-media-grid-item-color-border;
         border-radius: @sw-media-grid-item-border-radius;
-        padding: 2px;
-        margin: 5px 0;
+        padding: 8px;
+        margin: 0 0 8px;
         display: grid;
 
         grid-template-columns: 50px minmax(60px, 1fr);
