--- a/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
+++ b/Resources/administration/src/module/sw-product/page/sw-product-detail/sw-product-detail.html.twig
@@ -25,7 +25,7 @@
         {% endblock %}
 
         {% block sw_product_detail_content %}
-            <sw-card-view slot="content">
+            <sw-card-view slot="content" sidebar>
                 {% block sw_product_detail_content_tabs %}
                     <sw-tabs class="sw-product-detail-page__tabs">
                         <sw-tabs-item :route="{ name: 'sw.product.detail.base', params: { id: $route.params.id } }"
@@ -46,6 +46,10 @@
                                  :currencies="currencies">
                     </router-view>
                 {% endblock %}
+
+                <template slot="card-view-sidebar">
+                    <sw-sidebar-media-item :catalogId="product.catalogId"></sw-sidebar-media-item>
+                </template>
             </sw-card-view>
         {% endblock %}
     </sw-page>
