--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -61,9 +61,15 @@
                                                 :selected="showItemSelected(mediaItem)"
                                                 :showSelectionIndicator="isListSelect"
                                                 :isList="false"
-                                                :showContextMenu="true"
                                                 @sw-media-grid-media-item-delete="handleMediaGridItemDelete"
                                                 v-on="mediaItemSelectionHandler">
+
+                                                {% block sw_media_index_context_item_detail %}
+                                                    <sw-context-menu-item @click="showDetails(mediaItem)"
+                                                                          slot="additional-context-menu-items">
+                                                        {{ $tc('global.sw-media-grid-media-item.contextMenuDetailLabel') }}
+                                                    </sw-context-menu-item>
+                                                {% endblock %}
                                             </sw-media-grid-media-item>
 
                                         </sw-media-grid>
