NEXT-855 - Add tests for countries, currencies, languages and tax, including default list sorting

--- a/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-detail/sw-settings-tax-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-tax/page/sw-settings-tax-detail/sw-settings-tax-detail.html.twig
@@ -17,7 +17,7 @@
                 {% endblock %}
 
                 {% block sw_settings_tax_detail_actions_save %}
-                    <sw-button variant="primary" :disabled="tax.isLoading" @click.prevent="onSave">
+                    <sw-button class="sw_settings_tax_detail__save-action" variant="primary" :disabled="tax.isLoading" @click.prevent="onSave">
                         {{ $tc('sw-settings-tax.detail.buttonSave') }}
                     </sw-button>
                 {% endblock %}
